Checked off items on TODO list!!!

--- a/frontend/TODO
+++ b/frontend/TODO
@@ -1,2 +1,2 @@
-[ ] - Set up a config file that does not go to git with my password
+[X] - Set up a config file that does not go to git with my password
 [ ] - Fix soundboard page
