Fixed soundboard tab switching

--- a/frontend/TODO
+++ b/frontend/TODO
@@ -1,2 +1,3 @@
 [X] - Set up a config file that does not go to git with my password
-[ ] - Fix soundboard page
+[X] - Fix soundboard page
+[ ] - Fix tabs to take up full space
